# Equinor_Forecast

./: .gitignore  LICENSE  Mermaid.txt  README.md  experiment_results.json  p6_or_4995.txt  pyproject.toml  refactor_imports.py  reorganize_project.py  requirements-broken.txt  requirements.txt
OPSD_MODELS/: best_model_OPSD_load_load_default_default_ensemble_0_load.keras  best_model_OPSD_solar_solar_default_default_ensemble_0_solar.keras  best_model_OPSD_wind_wind_default_default_ensemble_0_wind.keras
UNISIM_MODELS/: best_disruptive_model_UNISIM_Prod-10_default_default_ensemble_0_Prod-10.keras  best_disruptive_model_UNISIM_Prod-1_default_default_ensemble_0_Prod-1.keras  best_disruptive_model_UNISIM_Prod-2_default_default_ensemble_0_Prod-2.keras  best_disruptive_model_UNISIM_Prod-3_default_default_ensemble_0_Prod-3.keras  best_disruptive_model_UNISIM_Prod-4_default_default_ensemble_0_Prod-4.keras  best_disruptive_model_UNISIM_Prod-5_default_default_ensemble_0_Prod-5.keras  best_disruptive_model_UNISIM_Prod-6_default_default_ensemble_0_Prod-6.keras  best_disruptive_model_UNISIM_Prod-7_default_default_ensemble_0_Prod-7.keras  best_disruptive_model_UNISIM_Prod-8_default_default_ensemble_0_Prod-8.keras  best_disruptive_model_UNISIM_Prod-9_default_default_ensemble_0_Prod-9.keras
VOLVE_MODELS/: best_disruptive_model_VOLVE_15_9-F-11_default_default_ensemble_0_15_9-F-11.keras  best_disruptive_model_VOLVE_15_9-F-11_default_default_ensemble_0_15_9-F-11_iter500_well15_9-F-11.keras  best_disruptive_model_VOLVE_15_9-F-12_default_default_ensemble_0_15_9-F-12.keras  (+12 more)
src/: pipeline.py  (+4 more)
(+170 files in other folders)
